--- a/docker/docker-compose.objects-apis.yml
+++ b/docker/docker-compose.objects-apis.yml
@@ -25,6 +25,7 @@ services:
       - DJANGO_SETTINGS_MODULE=objecttypes.conf.docker
       - SECRET_KEY=${SECRET_KEY:-fgv=c0hz&tl*8*3m3893@m+1pstrvidc9e^5@fpspmg%cy$15d}
       - ALLOWED_HOSTS=*
+      - USE_X_FORWARDED_HOST=true
       - DB_HOST=objects-objecttypes-db
       - DB_NAME=objecttypes
       - DB_USER=objecttypes
@@ -44,11 +45,12 @@ services:
       - open-forms-dev
 
   objects-web:
-    image: maykinmedia/objects-api:${OBJECTS_VERSION:-2.3.1}
+    image: maykinmedia/objects-api:${OBJECTS_VERSION:-2.3.2}
     environment: &objects_web_env
       - DJANGO_SETINGS_MODULE=objects.conf.docker
       - SECRET_KEY=${SECRET_KEY:-fgv=c0hz&tl*8*3m3893@m+1pstrvidc9e^5@fpspmg%cy$15d}
       - ALLOWED_HOSTS=*
+      - USE_X_FORWARDED_HOST=true
       - DB_HOST=objects-objecttypes-db
       - DB_NAME=objects
       - DB_USER=objects
@@ -86,8 +88,8 @@ services:
     volumes:
       - ./objects-apis/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - '8001:80'
-      - '8002:81'
+      - '8001:8001'
+      - '8002:8002'
     depends_on:
       - objects-web
       - objecttypes-web
